[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_main"]
[ext_resource type="PackedScene" path="res://scenes/GameBoard.tscn" id="2_board"]
[ext_resource type="PackedScene" path="res://scenes/SlotBar.tscn" id="3_slotbar"]

[node name="Main" type="Node2D"]
script = ExtResource("1_main")

[node name="GameBoard" parent="." instance=ExtResource("2_board")]
position = Vector2(280.0, 500.0)

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="SlotBar" parent="UILayer" instance=ExtResource("3_slotbar")]

[node name="HUD" type="Control" parent="UILayer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ScoreLabel" type="Label" parent="UILayer/HUD"]
offset_left = 20.0
offset_top = 20.0
offset_right = 500.0
offset_bottom = 70.0
theme_override_font_sizes/font_size = 40
text = "Score: 0"

[node name="StatusLabel" type="Label" parent="UILayer/HUD"]
offset_left = 0.0
offset_top = 80.0
offset_right = 1080.0
offset_bottom = 130.0
horizontal_alignment = 1
theme_override_font_sizes/font_size = 30
text = ""
